2012-03-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLNamespace.m: New class for namespaces
	* Source/GNUmakefile: Build with new class
	* Source/NSXMLDocument.m:
	* Source/NSXMLPrivate.h:
	* Source/NSXMLDTD.m:
	* Source/NSXMLNode.m:
	* Source/NSXMLDTDNode.m:
	* Source/NSXMLElement.m:
	Use a new class for namespaces ... just a placeholder/skeleton so far.
	Change other classes to know the correct type of their 'node' pointer.

2012-03-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLNode.m: Avoid crash when trying to get the parent of a
	namespace ... namespaces don't have parents and in fact have a
	completely different in-memory layout to other 'node' types.

2012-03-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLHandle.m:
	* Source/GSHTTPURLHandle.m:
	* Source/NSURLProtocol.m:
	* Headers/Foundation/NSURLProtocol.h:
	Tweak handling of debug settings to consistently write debug output
	using NSLog.

2012-03-09  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (-copyWithZone:): Don't set object value of
	copy if it is nil.
	* Source/NSXMLNode.m (+_objectForNode:): Use correct sub class for
	decl nodes.
	* Tests/base/NSXMLNode/basic.m: More tests.

2012-03-08  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (-detach, -_insertChild:atIndex:): Maintain
	doc pointer.
	* Source/NSXMLDTD.m: Implement a few methods.

2012-03-08  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (+_objectForNode:): Add a few more libxml2
	node types.

2012-03-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSStream.m: Attempt to fix logic for event handling of data
	streams.

2012-03-01  Jens Alfke <jens@mooseyard.com>

	* Headers/GNUstepBase/NSURL+GNUstepBase.h:
	* Source/Additions/NSURL+GNUstepBase.m:
	* Source/NSURL.m:
	New -pathWithEscapes method to enable differentiation between '/'
	characters in the original path and '%2F' escapes in it.

2012-03-06  Fred Kiefer <FredKiefer@gmx.de>
